<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:paddingEnd="15dp"
            android:text="@string/txtComponentComparedWinner"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/winnerName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/txtComponentComparedWinnerName"
            android:textColor="@color/orange_dark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/winnerData"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txtComponentComparedWinnerNumber"
            android:textColor="@color/orange"
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/player1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txtComponentComparedPlayer1"
                android:textSize="20sp"
                android:textColor="#222222" />
            <TextView
                android:id="@+id/data1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtComponentComparedData1"
                android:textSize="20sp"
                android:textColor="#888888" />
        </LinearLayout>

        <TextView
            android:id="@+id/vs"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txtComponentComparedVS"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/player2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txtComponentComparedPlayer2"
                android:textSize="20sp"
                android:textColor="#222222" />
            <TextView
                android:id="@+id/data2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/txtComponentComparedData2"
                android:textSize="20sp"
                android:textColor="#888888" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtComponentComparedDate"
        android:textSize="20sp"
        android:textColor="#AAA" />

</LinearLayout>

