<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNamePlayer1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/playerOneName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNamePlayer2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/playerTwoName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/txtSave"
        android:textColor="@color/black" />
</RelativeLayout>